Improved the scoring mechanism

--- a/src/main/resources/templates/page/console/introduction.html
+++ b/src/main/resources/templates/page/console/introduction.html
@@ -108,8 +108,35 @@
             <div class="layui-card">
                 <div class="layui-card-header">更新日志</div>
                 <div class="layui-card-body">
+                    <li class="layui-timeline-item"><i class="layui-icon layui-timeline-axis">&#xe63f;</i>
+                        <div class="layui-timeline-content layui-text">
+                            <h3 class="layui-timeline-title">
+                                V2.2.0
+                                <small>完善了评分的机制</small>&emsp;
+                                <span class="layui-badge-rim">2021-11-23</span>
+                            </h3>
+                            <ul>
+                                <li>一个人只能评论一个博客</li>
+                                <li>自己只能改自己的评论分数</li>
+                            </ul>
+                        </div>
+                    </li>
                     <li class="layui-timeline-item">
                         <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
+                        <div class="layui-timeline-content layui-text">
+                            <h3 class="layui-timeline-title">
+                                V2.1.0
+                                <small>增加了统计模块与学习模块</small>&emsp;
+                                <span class="layui-badge-rim">2021-11-19</span>
+                            </h3>
+                            <ul>
+                                <li>统计全站每月与每年的博客量</li>
+                                <li>找到想要的官方文档</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="layui-timeline-item">
+                    <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
                                 V2.0.2
