--- a/src/main/resources/templates/page/console/introduction.html
+++ b/src/main/resources/templates/page/console/introduction.html
@@ -111,7 +111,7 @@
                     <li class="layui-timeline-item"><i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
-                                V2.2.0
+                                V2.3.0
                                 <small>完善了评分的机制</small>&emsp;
                                 <span class="layui-badge-rim">2021-11-23</span>
                             </h3>
@@ -125,7 +125,7 @@
                         <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
-                                V2.1.0
+                                V2.2.0
                                 <small>增加了统计模块与学习模块</small>&emsp;
                                 <span class="layui-badge-rim">2021-11-19</span>
                             </h3>
@@ -139,7 +139,7 @@
                     <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
-                                V2.0.2
+                                V2.1.1
                                 <small>修饰了一下页面</small>&emsp;
                                 <span class="layui-badge-rim">2021-11-18</span>
                             </h3>
@@ -154,13 +154,13 @@
                         <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
-                                V2.0.1
+                                V2.1.0
                                 <small>增加了评分模块</small>&emsp;
                                 <span class="layui-badge-rim">2021-11-17</span>
                             </h3>
                             <ul>
-                                <li>当前登陆的用户可以给某个博客评分</li>
-								<li>对于同一个博客，同一个用户只能评论一次</li>
+                                <li>评分的insert,delete,update</li>
+                                <li>页面基本功能实现</li>
                             </ul>
                         </div>
                     </li>
