--- a/src/main/resources/templates/page/template/login.html
+++ b/src/main/resources/templates/page/template/login.html
@@ -55,6 +55,10 @@
                 <div class="layui-form-item">
                     <button lay-filter="login-submit" id="submit" style="opacity:0.5;pointer-events:none;" class="layui-btn layui-btn-fluid" lay-submit>登 录</button>
                 </div>
+                <div class="layui-form-item">
+                    <a href="/login" class="layui-link">重置页面</a>
+                    <a href="/logins" class="layui-link pull-right">换个登录页面</a>
+                </div>
             </form>
         </div>
     </div>
