Fixed the bug that the comment cannot be echoed   in the modification function of the comment module

--- a/src/main/resources/templates/page/template/boke.html
+++ b/src/main/resources/templates/page/template/boke.html
@@ -170,6 +170,7 @@
                             headers : {
                                 Authorization: '[[${session.token}]]'
                             },
+                            //变为同步请求
                             async:false,
                             success: function (res) {
                                 if (res.code == 0){
