Easy version for download logo

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,8 +18,8 @@
     <!-- 头部 -->
     <div class="layui-header">
         <div class="layui-logo">
-            <img src="./assets/images/logo.png"/>
-            <cite>&nbsp;博客后台管理系统</cite>
+            <a href="/download" title="点我下载logo"><img src="./assets/images/logo.png"/>
+            <cite style="color: #e7e7e7">博客后台管理系统</cite></a>
         </div>
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item" lay-unselect>
