--- a/src/main/resources/templates/page/console/introduction.html
+++ b/src/main/resources/templates/page/console/introduction.html
@@ -113,12 +113,14 @@
                             <h3 class="layui-timeline-title">
                                 V2.3.0
                                 <small>完善了评分的机制</small>&emsp;
-                                <span class="layui-badge-rim">2021-11-23~24</span>
+                                <span class="layui-badge-rim">2021-11-23~25</span>
                             </h3>
                             <ul>
                                 <li>一个人只能评论一个博客</li>
                                 <li>自己只能改自己的评论分数</li>
                                 <li>增加了验证码版本的登录页面</li>
+                                <li>修复了评论板块修改功能中富文本框的数据未回显的bug</li>
+                                <li>增加了点击logo图标下载logo的功能</li>
                             </ul>
                         </div>
                     </li>
