repaired small bug.

--- a/src/main/resources/templates/page/template/reportByYear.html
+++ b/src/main/resources/templates/page/template/reportByYear.html
@@ -16,7 +16,7 @@
     option = null;
     option = {
       title : {
-        text: '门诊部年度统计',
+        text: '博客全站发文量年度统计',
         subtext: '真实有效',
         x:'center'
       },
