repaired some bug and add tpl-message

--- a/src/main/resources/templates/page/tpl/tpl-reader-password.html
+++ b/src/main/resources/templates/page/tpl/tpl-reader-password.html
@@ -13,7 +13,7 @@
     <![endif]-->
 </head>
 <body>
-<input type="hidden" th:value="${session.reader.password}"  id="password">
+<input type="hidden" th:value="${session.user.password}"  id="password">
 <form class="layui-form model-form" id="form-psw">
     <div class="layui-form-item">
         <label class="layui-form-label">原始密码:</label>
