--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,6 +36,12 @@
             <li class="layui-nav-item" lay-unselect>
                 <a ew-event="note" title="便签"><i class="layui-icon layui-icon-note"></i></a>
             </li>
+            <li class="layui-nav-item" lay-unselect>
+                <a ew-event="message" title="消息">
+                    <i class="layui-icon layui-icon-notice"></i>
+                    <span class="layui-badge-dot"></span><!--小红点-->
+                </a>
+            </li>
             <li class="layui-nav-item layui-hide-xs" lay-unselect>
                 <a ew-event="fullScreen" title="全屏"><i class="layui-icon layui-icon-screen-full"></i></a>
             </li>
@@ -114,7 +120,7 @@
     <!-- 底部 -->
     <div class="layui-footer">
         copyright © 2021 <a target="_blank">LGD</a> all rights reserved.
-        <span class="pull-right">Version 1.0.1</span>
+        <span class="pull-right">Version 2.3.0</span>
     </div>
 </div>
 
