--- a/src/main/resources/templates/page/console/introduction.html
+++ b/src/main/resources/templates/page/console/introduction.html
@@ -111,6 +111,19 @@
                     <li class="layui-timeline-item"><i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
+                                V2.4.0
+                                <small>丰富了评分模块</small>&emsp;
+                                <span class="layui-badge-rim">2021-12-2</span>
+                            </h3>
+                            <ul>
+                                <li>增加了二级联动技术</li>
+                                <li>在增加页面，选择了博客类别后会增加对应博客标题的显示</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="layui-timeline-item"><i class="layui-icon layui-timeline-axis">&#xe63f;</i>
+                        <div class="layui-timeline-content layui-text">
+                            <h3 class="layui-timeline-title">
                                 V2.3.0
                                 <small>完善了评分的机制</small>&emsp;
                                 <span class="layui-badge-rim">2021-11-23~25</span>
