--- a/src/main/resources/templates/page/console/introduction.html
+++ b/src/main/resources/templates/page/console/introduction.html
@@ -77,11 +77,13 @@
                             <h3 class="layui-timeline-title">
                                 V2.4.0
                                 <small>丰富了评分模块</small>&emsp;
-                                <span class="layui-badge-rim">2021-12-2</span>
+                                <span class="layui-badge-rim">2021-12-2~3</span>
                             </h3>
                             <ul>
                                 <li>增加了二级联动技术</li>
                                 <li>在增加页面，选择了博客类别后会增加对应博客标题的显示</li>
+                                <li>增加了欢迎页面的轮播</li>
+                                <li>增加了MD5方式的单项加密，提高相对安全</li>
                             </ul>
                         </div>
                     </li>
