--- a/src/main/resources/templates/page/template/score.html
+++ b/src/main/resources/templates/page/template/score.html
@@ -78,7 +78,7 @@
     <div class="layui-form-item">
       <label class="layui-form-label">评分</label>
       <div class="layui-input-block">
-        <input name="score" class="layui-input" type="text" placeholder="输入分数"/>
+        <input name="score" class="layui-input" type="text" placeholder="输入分数" lay-verify="required"/>
       </div>
     </div>
 
