--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="./assets/images/favicon.ico" rel="icon">
-    <title>博客学习系统</title>
+    <title>博客购物学习系统</title>
     <link rel="stylesheet" href="./assets/libs/layui/css/layui.css"/>
     <link rel="stylesheet" href="./assets/module/admin.css?v=315"/>
     <!--[if lt IE 9]>
@@ -19,7 +19,7 @@
     <div class="layui-header">
         <div class="layui-logo">
             <a href="/download" title="点我下载logo"><img src="./assets/images/logo.png"/>
-            <cite style="color: #e7e7e7">博客学习系统</cite></a>
+            <cite style="color: #e7e7e7">博客购物学习系统</cite></a>
         </div>
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item" lay-unselect>
@@ -111,8 +111,8 @@
                 <li class="layui-nav-item">
                     <a><i class="layui-icon layui-icon-face-smile"></i>&emsp;<cite>本站购物</cite></a>
                     <dl class="layui-nav-child">
-                        <dd><a lay-href="/product"><i class="layui-icon layui-icon-release">&emsp;商城</i></a></dd>
-                        <dd><a lay-href="/order"><i class="layui-icon layui-icon-release">&emsp;购物车</i></a></dd>
+                        <dd><a lay-href="/product"><i class="layui-icon layui-icon-rmb">&emsp;商城</i></a></dd>
+                        <dd><a lay-href="/order"><i class="layui-icon layui-icon-cart">&emsp;购物车</i></a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
