--- a/src/main/resources/templates/page/console/introduction.html
+++ b/src/main/resources/templates/page/console/introduction.html
@@ -76,14 +76,15 @@
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
                                 V2.4.0
-                                <small>丰富了评分模块</small>&emsp;
-                                <span class="layui-badge-rim">2021-12-2~3</span>
+                                <small>丰富了评分，增加了购物模块</small>&emsp;
+                                <span class="layui-badge-rim">2021-12-2~4</span>
                             </h3>
                             <ul>
                                 <li>增加了二级联动技术</li>
                                 <li>在增加页面，选择了博客类别后会增加对应博客标题的显示</li>
                                 <li>增加了欢迎页面的轮播</li>
                                 <li>增加了MD5方式的单项加密，提高相对安全</li>
+                                <li>实现了商品与购物数据库设计，后端基本功能，框架及页面显示</li>
                             </ul>
                         </div>
                     </li>
