--- a/src/main/resources/templates/page/template/product.html
+++ b/src/main/resources/templates/page/template/product.html
@@ -86,8 +86,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">购买数量</label>
             <div class="layui-input-block">
-                <input name="amount" placeholder="请输入购买数量" type="text" class="layui-input" maxlength="20"
-                       lay-verType="tips" lay-verify="required" required/>
+                <input name="amount" class="layui-input" type="text" placeholder="请输入购买数量" lay-verify="required"/>
             </div>
         </div>
         <div class="layui-form-item text-right">
@@ -174,49 +173,51 @@
         }
         // 显示表单弹窗
         function showEditModel(mBook) {
-                admin.open({
-                    type: 1,
-                    title: '购买商品',
-                    content: $('#modelBook').html(),
-                    success: function (layero, dIndex) {
-                        $(layero).children('.layui-layer-content').css('overflow', 'visible');
-                        var url = '/api/addToOrder';
-                        // 回显数据
-                        form.val('modelBookForm', mBook);
-                        // 表单提交事件
-                        form.on('submit(modelSubmitBook)', function (data) {
-                            layer.load(2);
-                            $.ajax({
-                                url: url,
-                                type: "POST",
-                                data: JSON.stringify(data.field),
-                                headers: {Authorization: '[[${session.token}]]'},
-                                contentType: "application/json; charset=utf-8",
-                                dataType: "json",
-                                success: function (res) {
-                                    layer.closeAll('loading');
-                                    if (res.code == 200) {
-                                        layer.close(dIndex);
-                                        layer.msg(res.msg, {icon: 1});
-                                        insTb.reload({}, 'data');
-                                    } else {
-                                        layer.msg("权限不够", {icon: 2});
-                                    }
-                                },
-                                error: function (xhr, textStatus, errorThrown) {
-                                    if (xhr.status == 401) {
-                                        layer.closeAll('loading');
-                                        layer.msg("权限不够", {icon: 2});
-                                    } else {
-                                        // 调用外部的error
-                                        error && error(xhr, textStatus, errorThrown);
-                                    }
+            admin.open({
+                type: 1,
+                title: '购买商品',
+                area: ['550px', '300px'],
+                content: $('#modelBook').html(),
+                success: function (layero, dIndex) {
+                    $(layero).children('.layui-layer-content').css('overflow', 'visible');
+                    var url = '/api/addToOrder';
+                    // 回显数据
+                    form.val('modelBookForm', mBook);
+                    // 表单提交事件
+                    form.on('submit(modelSubmitBook)', function (data) {
+                        console.log(data)
+                        layer.load(2);
+                        $.ajax({
+                            url:url,
+                            type:"POST",
+                            data:JSON.stringify(data.field),
+                            contentType:"application/json; charset=utf-8",
+                            headers : { Authorization: '[[${session.token}]]'},
+                            dataType:"json",
+                            success: function(res){
+                                layer.closeAll('loading');
+                                if (res.code == 200) {
+                                    layer.close(dIndex);
+                                    layer.msg(res.msg, {icon: 1});
+                                    insTb.reload({}, 'data');
+                                } else if(res.code == 500){
+                                    layer.msg(res.msg, {icon: 2});
                                 }
-                            })
-                            return false;
-                        });
-                    }
-                });
+                            },
+                            error : function(xhr,textStatus,errorThrown){
+                                if (xhr.status == 401) {
+                                    layer.closeAll('loading');
+                                    layer.msg("权限不够", {icon: 2});
+                                } else{
+                                    // 调用外部的error
+                                    error && error(xhr,textStatus,errorThrown);
+                                }
+                            }
+                        })
+                        return false;
+                    });
+                }
+            });
             }
     });
 </script>
