add shopcar's delete

--- a/src/main/resources/templates/page/console/introduction.html
+++ b/src/main/resources/templates/page/console/introduction.html
@@ -75,7 +75,7 @@
                     <li class="layui-timeline-item"><i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
-                                V2.4.0
+                                V3.0.0
                                 <small>丰富了评分，增加了购物模块</small>&emsp;
                                 <span class="layui-badge-rim">2021-12-2~4</span>
                             </h3>
@@ -84,7 +84,8 @@
                                 <li>在增加页面，选择了博客类别后会增加对应博客标题的显示</li>
                                 <li>增加了欢迎页面的轮播</li>
                                 <li>增加了MD5方式的单项加密，提高相对安全</li>
-                                <li>实现了商品与购物数据库设计，后端基本功能，框架及页面显示</li>
+                                <li>实现了商品与购物车数据库设计，后端基本功能，框架及页面显示</li>
+                                <li>完成了商品的购买与购物车的清理</li>
                             </ul>
                         </div>
                     </li>
