add product's data

--- a/src/main/resources/templates/page/template/order.html
+++ b/src/main/resources/templates/page/template/order.html
@@ -37,7 +37,7 @@
                         <button class="layui-btn icon-btn" lay-filter="formSubSearchProduct" lay-submit>
                             <i class="layui-icon">&#xe615;</i>搜索
                         </button>
-<!--                        <button id="btnProduct" class="layui-btn icon-btn"><i class="layui-icon">&#xe654;</i>添加</button>-->
+                        <button id="btnProduct" class="layui-btn icon-btn"><i class="layui-icon">&#xe654;</i>结算</button>
                     </div>
                 </div>
             </div>
