--- a/src/main/resources/templates/page/console/introduction.html
+++ b/src/main/resources/templates/page/console/introduction.html
@@ -75,6 +75,19 @@
                     <li class="layui-timeline-item"><i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
+                                V3.1.0
+                                <small>完善了购物模块</small>&emsp;
+                                <span class="layui-badge-rim">2021-12-8</span>
+                            </h3>
+                            <ul>
+                                <li>实现了商品选购的搜索功能</li>
+                                <li>实现了购物车的搜索功能</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="layui-timeline-item"><i class="layui-icon layui-timeline-axis">&#xe63f;</i>
+                        <div class="layui-timeline-content layui-text">
+                            <h3 class="layui-timeline-title">
                                 V3.0.0
                                 <small>丰富了评分，增加了购物模块</small>&emsp;
                                 <span class="layui-badge-rim">2021-12-2~4</span>
