add shopcar's query

--- a/src/main/resources/templates/page/template/order.html
+++ b/src/main/resources/templates/page/template/order.html
@@ -135,7 +135,7 @@
             insTb.reload({
                 where: data.field,
                 headers : { Authorization: '[[${session.token}]]'},
-                url:'/api/findProduct',
+                url:'/api/findOrder',
                 page : {curr : 1}},
                 'data');
         });
